crates/solidity-v2/testing/snapshots/cst_output/Expression/keyword_auto/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected AutoKeyword_Reserved. One of AddressKeyword_Reserved, AssemblyKeyword_Reserved, AtKeyword_Unreserved, Bang, BoolKeyword_Reserved, BreakKeyword_Reserved, BytesKeyword_Reserved, CloseBrace, ContinueKeyword_Reserved, DecimalLiteral, DeleteKeyword_Reserved, DoKeyword_Reserved, EmitKeyword_Reserved, ErrorKeyword_Unreserved, FalseKeyword_Reserved, FixedKeyword_Reserved, ForKeyword_Reserved, FromKeyword_Unreserved, FunctionKeyword_Reserved, GlobalKeyword_Unreserved, HexLiteral, HexStringLiteral, Identifier, IfKeyword_Reserved, IntKeyword_Reserved, LayoutKeyword_Unreserved, MappingKeyword_Reserved, Minus, MinusMinus, NewKeyword_Reserved, OpenBrace, OpenBracket, OpenParen, PayableKeyword_Reserved, PlusPlus, ReturnKeyword_Reserved, RevertKeyword_Unreserved, StringKeyword_Reserved, StringLiteral, SuperKeyword_Reserved, ThisKeyword_Reserved, Tilde, TransientKeyword_Unreserved, TrueKeyword_Reserved, TryKeyword_Reserved, TypeKeyword_Reserved, UfixedKeyword_Reserved, UintKeyword_Reserved, UncheckedKeyword_Reserved, UnicodeStringLiteral, WhileKeyword_Reserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/Expression/keyword_auto/input.sol:4:1 ]
   │
 4 │ auto
   │ ──┬─  
   │   ╰─── Error occurred here.
───╯
